this is a safe point