@@ -1,5 +1,6 @@
 package com.c4gt.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -11,28 +12,29 @@ import java.util.List;
 
 @Configuration
 public class CorsConfig {
-    
+
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
+
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Allow credentials
+
         config.setAllowCredentials(true);
-        
-        // Allow ALL origins for now (you can restrict later)
-        config.setAllowedOriginPatterns(List.of("*"));
-        
-        // Allow all headers
-        config.setAllowedHeaders(Arrays.asList("*"));
-        
-        // Allow all methods
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        
-        // Expose headers
-        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        
-        source.registerCorsConfiguration("/**", config);
+
+        // Explicit origin whitelist — no wildcard
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins);
+
+        config.setAllowedHeaders(List.of(
+                "Authorization", "Content-Type", "Accept", "X-Requested-With"));
+        config.setAllowedMethods(List.of(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setExposedHeaders(List.of("Authorization"));
+        config.setMaxAge(3600L);
+
+        source.registerCorsConfiguration("/api/**", config);
         return new CorsFilter(source);
     }
 }
